JWT PRIMERA PRACTICA

--- a/clase10/src/views/home.handlebars
+++ b/clase10/src/views/home.handlebars
@@ -1,12 +1,5 @@
 <div>
-  <h1>Home practica de IO</h1>
-  <input id="textbox" />
-  {{#each logs as |obj|}}
-    {{obj.socketid}}:
-    {{obj.message}}
-  {{/each}}
-  <p id="log"></p>
+  <h1>Perfil</h1>
+  <p id="result"></p>
 </div>
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/home.js"></script>
+<script src="/js/profile.js"></script>
